src/ffi.rs


    // 初始化API
    //
    // # 参数
    // * `api` - API实例指针
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_Init(api: *mut c_void);
    }

    // 等待API线程结束运行
    //
    // # 参数
    // * `api` - API实例指针
    //
    // # 返回值
    // 线程退出代码
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_Join(api: *mut c_void) -> c_int;
    }

    // 获取当前交易日
    //
    // # 参数
    // * `api` - API实例指针
    //
    // # 返回值
    // 交易日字符串(YYYYMMDD格式)
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_GetTradingDay(api: *mut c_void) -> *const c_char;
    }

    // 注册前置机网络地址
    //
    // # 参数
    // * `api` - API实例指针
    // * `front_address` - 前置机网络地址
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_RegisterFront(api: *mut c_void, front_address: *const c_char);
    }

    // 注册名字服务器网络地址
    //
    // # 参数
    // * `api` - API实例指针
    // * `ns_address` - 名字服务器网络地址
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_RegisterNameServer(api: *mut c_void, ns_address: *const c_char);
    }

    // 注册名字服务器用户信息
    //
    // # 参数
    // * `api` - API实例指针
    // * `user_info` - 用户信息
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_RegisterFensUserInfo(api: *mut c_void, user_info: *const c_void);
    }

    // 注册回调接口
    //
    // # 参数
    // * `api` - API实例指针
    // * `spi` - 派生自CThostFtdcTraderSpi的实例指针
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_RegisterSpi(api: *mut c_void, spi: *mut c_void);
    }

    // 获取已连接的前置信息
    //
    // # 参数
    // * `api` - API实例指针
    // * `front_info` - 前置信息结构体指针
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_GetFrontInfo(api: *mut c_void, front_info: *mut c_void);
    }

    // 注册微信用户系统信息
    //
    // # 参数
    // * `api` - API实例指针
    // * `user_system_info` - 微信用户系统信息
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_RegisterWechatUserSystemInfo(
            api: *mut c_void,
            user_system_info: *mut c_void,
        ) -> c_int;
    }

    // 上报微信用户系统信息
    //
    // # 参数
    // * `api` - API实例指针
    // * `user_system_info` - 微信用户系统信息
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_SubmitWechatUserSystemInfo(
            api: *mut c_void,
            user_system_info: *mut c_void,
        ) -> c_int;
    }

    // 客户端认证请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 认证请求
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqAuthenticate(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 注册用户终端信息，用于中继服务器多连接模式
    //
    // # 参数
    // * `api` - API实例指针
    // * `user_info` - 用户终端信息
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_RegisterUserSystemInfo(
            api: *mut c_void,
            user_info: *const c_void,
        ) -> c_int;
    }

    // 上报用户终端信息，用于中继服务器操作员登录模式
    //
    // # 参数
    // * `api` - API实例指针
    // * `user_info` - 用户终端信息
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_SubmitUserSystemInfo(
            api: *mut c_void,
            user_info: *const c_void,
        ) -> c_int;
    }

    // 用户登录请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 登录请求
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqUserLogin(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 登出请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 登出请求
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqUserLogout(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询资金账户
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询资金账户请求字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryTradingAccount(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询投资者持仓
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询投资者持仓请求字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryInvestorPosition(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 第一阶段新增API方法

    // 报单录入请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 报单录入请求字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqOrderInsert(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 报单操作请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 报单操作请求字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqOrderAction(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询报单
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询报单请求字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryOrder(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询成交
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询成交请求字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryTrade(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询合约
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询合约请求字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryInstrument(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 第二阶段新增API方法

    // 请求查询合约保证金率
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询合约保证金率请求字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryInstrumentMarginRate(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询合约手续费率
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询合约手续费率请求字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryInstrumentCommissionRate(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询交易所
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询交易所请求字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryExchange(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询产品
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询产品请求字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryProduct(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 投资者结算结果确认
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 投资者结算结果确认信息
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqSettlementInfoConfirm(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 预埋单录入请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 预埋单字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqParkedOrderInsert(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 预埋撤单录入请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 预埋撤单字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqParkedOrderAction(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 第三阶段新增API方法

    // 执行宣告录入请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 执行宣告录入字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqExecOrderInsert(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 执行宣告操作请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 执行宣告操作字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqExecOrderAction(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 询价录入请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 询价录入字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqForQuoteInsert(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 报价录入请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 报价录入字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQuoteInsert(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 报价操作请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 报价操作字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQuoteAction(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }
